# career-intelligence-assistant

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.cloudrun  Initital_IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  TODO.md  cloudbuild.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  feature_list.json  nginx.cloudrun.conf  run-docker.sh  run-servers.sh  supervisord.conf
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base_agent.py  chat_fit.py  interview_prep.py  jd_analyzer.py  market_insights.py  recommendation.py  resume_parser.py  skill_matcher.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/guardrails/: __init__.py  input_validator.py  output_filter.py  pii_detector.py  prompt_guard.py  rate_limiter.py
backend/app/models/: __init__.py  session.py  specs.py
backend/app/services/: __init__.py  document_parser.py  embedding.py  llamaindex_service.py  llm_service.py  neo4j_store.py  scrapy_service.py
backend/app/workflows/: __init__.py  analysis_workflow.py  events.py  state.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: test_agent_contracts.py  test_openapi_compliance.py
backend/tests/e2e/: test_live_workflow.py
backend/tests/evaluation/: conftest.py  generate_test_cases.py  generated_test_data.py  llm_judge.py  test_agents_evaluation.py  test_cases.py
backend/tests/integration/: __init__.py  test_agent_workflow.py  test_api_routes.py  test_neo4j_integration.py  test_rate_limiting.py  test_websocket.py
backend/tests/unit/: __init__.py  test_chat_fit_agent.py  test_document_parser.py  test_embedding_service.py  test_guardrails.py  test_interview_prep_agent.py  test_jd_analyzer_agent.py  test_market_insights_agent.py  test_neo4j_store.py  (+5 more)
(+166 files in other folders)
